<resources>
    <string name="app_name">intellicruiter</string>


    //Introduction Screen
    <string name="skip">Skip</string>


    //Sign In / Sign up Screen
    <string name="welcome">Welcome</string>
    <string name="signin">Sign In</string>
    <string name="not_have_an_account_signup_here">Not have an account? Sign up Here</string>
    <string name="user_login">User Login</string>
    <string name="already_registered_sign_in_here">Already Registered? Sign in Here</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_password">Enter password</string>
    <string name="re_enter_password">Re-Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="user_registration">User Registration</string>
    <string name="subscribe">Subscribe</string>
    <string name="Back">BACK</string>
    <string name="name">Full Name</string>
    <string name="enter_phonenumber">Enter Mobile Number</string>
    <string name="dob">Enter Date of Birth (DD/MM/YYYY)</string>

    // Firebase Notification : topic based Messaging Service
    <array name="topics">
        <item>notifications</item>
        <item>promotional_messages</item>
    </array>

    //Input Validation
    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="dateerror">Enter a valid date</string>
    <string name="err_password">Enter a valid password</string>
    <string name="err_password_confirmation">Enter exact password</string>
    <string name="err_birth">You must be between 1900 and this year</string>

    // Fonts
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="enter_address">Enter Address</string>
    <string name="re_enter_city">Enter City</string>
    <string name="re_enter_state">Enter State</string>
    <string name="re_enter_country">Country</string>
    <string name="Update_Profile">Update Profile</string>
    <string name="User_Type">User Type</string>
    <string name="User_Gender">User Gender</string>


    //Navigation
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="SignOut">Sign Out</string>

    // Buttons
    <string name="BackToClient">Back to Client</string>
    <string name="action_logout">Logout</string>

</resources>
