<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/my_bg_anim"
    android:id="@+id/mySignInLayout"
    android:screenOrientation="portrait"
    tools:context="app.recruiter.intellingent.intellicruiter.SignInActivity">

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_login"
            android:fontFamily="sans-serif"
            android:textColor="#FFFFFF"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_email"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/colorTextSignUp"
            android:textColorHint="@color/colorTextSignUp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_password"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/colorTextSignUp"
            android:textColorHint="@color/colorTextSignUp"

            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="sans-serif"
            android:background="@drawable/btn"
            android:text="@string/signin" />

        <Button
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="sans-serif"
            android:background="@drawable/btn"
            android:text="@string/welcome" />

        <TextView
            android:text="@string/not_have_an_account_signup_here"
            android:id="@+id/textViewSignUp"
            android:textAlignment="center"
            android:layout_margin="15dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorTextSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>