<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/my_bg_anim"
    android:id="@+id/mySignUpLayout"
    tools:context=".SignUpActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/user_registration"
                android:fontFamily="sans-serif"
                android:screenOrientation="portrait"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF" />



            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="sans-serif-thin"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorTextSignUp"
                android:textColor="@color/colorTextSignUp" />


            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="sans-serif-thin"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorTextSignUp"
                android:textColor="@color/colorTextSignUp" />

            <EditText
                android:id="@+id/editTextRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:ems="10"
                android:fontFamily="sans-serif-thin"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorTextSignUp"
                android:textColor="@color/colorTextSignUp" />

            <Button
                android:id="@+id/buttonSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="sans-serif"
                android:background="@drawable/btn"
                android:text="@string/sign_up" />

            <TextView
                android:id="@+id/textViewSignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/already_registered_sign_in_here"
                android:textAlignment="center"
                android:textColor="@color/colorTextSignUp" />

        </LinearLayout>

</RelativeLayout>